# cweb

./: .gitignore  README.md  build-wasm.sh  next.config.ts  package-lock.json  package.json
app/: layout.tsx  page.tsx
components/: CodeEditor.tsx
lib/: wasmLoader.ts
public/wasm/: c_compiler_wasm.js  c_compiler_wasm_bg.wasm
types/: wasm.d.ts
wasm/: .gitignore  Cargo.toml  README.md  build.sh  index.html  package.json
wasm/src/: lib.rs
